--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -100,27 +100,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'from_csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/root/wikibase-nttdata/notebooks/insert_data.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mfrom_csv(team_data)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
-      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/pandas/__init__.py:261\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marrays\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msparse\u001b[39;00m \u001b[39mimport\u001b[39;00m SparseArray \u001b[39mas\u001b[39;00m _SparseArray\n\u001b[1;32m    259\u001b[0m     \u001b[39mreturn\u001b[39;00m _SparseArray\n\u001b[0;32m--> 261\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodule \u001b[39m\u001b[39m'\u001b[39m\u001b[39mpandas\u001b[39m\u001b[39m'\u001b[39m\u001b[39m has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'from_csv'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Family Name</th>\n",
+       "      <th>Birthdate</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Start date</th>\n",
+       "      <th>End date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S000001</td>\n",
+       "      <td>Mohammad Zain</td>\n",
+       "      <td>Abbas</td>\n",
+       "      <td>09/05/1995</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N3</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>06/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S000002</td>\n",
+       "      <td>Kainaat</td>\n",
+       "      <td>Amjid</td>\n",
+       "      <td>30/12/1996</td>\n",
+       "      <td>Pakistani</td>\n",
+       "      <td>SK-N1</td>\n",
+       "      <td>19/07/2022</td>\n",
+       "      <td>13/09/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S000003</td>\n",
+       "      <td>Sergio</td>\n",
+       "      <td>Postigo</td>\n",
+       "      <td>12/02/1996</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td>SK-N2</td>\n",
+       "      <td>26/07/2022</td>\n",
+       "      <td>13/10/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>S000004</td>\n",
+       "      <td>Emmanuel</td>\n",
+       "      <td>Jamin</td>\n",
+       "      <td>28/09/1978</td>\n",
+       "      <td>French</td>\n",
+       "      <td>SKL-N2</td>\n",
+       "      <td>10/01/2015</td>\n",
+       "      <td>11/01/2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
+       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
+       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
+       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
+       "3  S000004       Emmanuel       Jamin  28/09/1978      French   SKL-N2   \n",
+       "\n",
+       "   Start date    End date  \n",
+       "0  19/07/2022  06/09/2022  \n",
+       "1  19/07/2022  13/09/2022  \n",
+       "2  26/07/2022  13/10/2022  \n",
+       "3  10/01/2015  11/01/2015  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.from_csv(team_data)\n",
+    "df = pd.read_csv(team_data)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10185833",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
