--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -210,8 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "10185833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Id',\n",
+       " 'Name',\n",
+       " 'Family Name',\n",
+       " 'Birthdate',\n",
+       " 'Nationality',\n",
+       " 'Category',\n",
+       " 'Start date',\n",
+       " 'End date']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_names = df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f06af458",
    "metadata": {},
    "outputs": [],
    "source": []
