--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -238,8 +238,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f06af458",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>prop_type</th>\n",
+       "      <th>type</th>\n",
+       "      <th>mapping_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Id</td>\n",
+       "      <td>num</td>\n",
+       "      <td>internal</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Name</td>\n",
+       "      <td>str</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Family Name</td>\n",
+       "      <td>str</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Birthdate</td>\n",
+       "      <td>date</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nationality</td>\n",
+       "      <td>str</td>\n",
+       "      <td>external</td>\n",
+       "      <td>P27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        column prop_type      type mapping_code\n",
+       "0           Id       num  internal          NaN\n",
+       "1         Name       str  external         P735\n",
+       "2  Family Name       str  external         P734\n",
+       "3    Birthdate      date  external         P569\n",
+       "4  Nationality       str  external          P27"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_mapping = join(data_dir, \"team_mapping.csv\")\n",
+    "map_df = pd.read_csv(team_mapping)\n",
+    "map_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "11611bbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'column': {0: 'Id',\n",
+       "  1: 'Name',\n",
+       "  2: 'Family Name',\n",
+       "  3: 'Birthdate',\n",
+       "  4: 'Nationality',\n",
+       "  5: 'Category',\n",
+       "  6: 'Start date',\n",
+       "  7: 'End date'},\n",
+       " 'prop_type': {0: 'num',\n",
+       "  1: 'str',\n",
+       "  2: 'str',\n",
+       "  3: 'date',\n",
+       "  4: 'str',\n",
+       "  5: 'str',\n",
+       "  6: 'date',\n",
+       "  7: 'date'},\n",
+       " 'type': {0: 'internal',\n",
+       "  1: 'external',\n",
+       "  2: 'external',\n",
+       "  3: 'external',\n",
+       "  4: 'external',\n",
+       "  5: 'internal',\n",
+       "  6: 'external',\n",
+       "  7: 'external'},\n",
+       " 'mapping_code': {0: nan,\n",
+       "  1: 'P735',\n",
+       "  2: 'P734',\n",
+       "  3: 'P569',\n",
+       "  4: 'P27',\n",
+       "  5: nan,\n",
+       "  6: 'P580',\n",
+       "  7: 'P582'}}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_df.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "640b25ac",
    "metadata": {},
    "outputs": [],
    "source": []
