--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -331,54 +331,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "11611bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_with_mappings = list(map_df.T.to_dict().values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bcae7e4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'column': {0: 'Id',\n",
-       "  1: 'Name',\n",
-       "  2: 'Family Name',\n",
-       "  3: 'Birthdate',\n",
-       "  4: 'Nationality',\n",
-       "  5: 'Category',\n",
-       "  6: 'Start date',\n",
-       "  7: 'End date'},\n",
-       " 'prop_type': {0: 'num',\n",
-       "  1: 'str',\n",
-       "  2: 'str',\n",
-       "  3: 'date',\n",
-       "  4: 'str',\n",
-       "  5: 'str',\n",
-       "  6: 'date',\n",
-       "  7: 'date'},\n",
-       " 'type': {0: 'internal',\n",
-       "  1: 'external',\n",
-       "  2: 'external',\n",
-       "  3: 'external',\n",
-       "  4: 'external',\n",
-       "  5: 'internal',\n",
-       "  6: 'external',\n",
-       "  7: 'external'},\n",
-       " 'mapping_code': {0: nan,\n",
-       "  1: 'P735',\n",
-       "  2: 'P734',\n",
-       "  3: 'P569',\n",
-       "  4: 'P27',\n",
-       "  5: nan,\n",
-       "  6: 'P580',\n",
-       "  7: 'P582'}}"
+       "{'column': 'Id', 'prop_type': 'num', 'type': 'internal', 'mapping_code': nan}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "map_df.to_dict()"
+    "columns_with_mappings[0]"
    ]
   },
   {
@@ -387,7 +366,11 @@
    "id": "640b25ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for item in columns_with_mappings:\n",
+    "    col_name = item['column']\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
