Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -369,6 +369,7 @@
    "source": [
     "for item in columns_with_mappings:\n",
     "    col_name = item['column']\n",
+    "    prop_type = item['prop_type']\n",
     "    "
    ]
   }
