Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -368,9 +368,10 @@
    "outputs": [],
    "source": [
     "for item in columns_with_mappings:\n",
-    "    col_name = item['column']\n",
-    "    prop_type = item['prop_type']\n",
-    "    "
+    "    __col_name = item['column']\n",
+    "    __prop_type = item['prop_type']\n",
+    "    __type = item['type']\n",
+    "    __mapping_code = item['']"
    ]
   }
  ],
