--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -371,7 +371,11 @@
     "    __col_name = item['column']\n",
     "    __prop_type = item['prop_type']\n",
     "    __type = item['type']\n",
-    "    __mapping_code = item['']"
+    "    __mapping_code = item['mapping_code']\n",
+    "\n",
+    "\n",
+    "    if __type == 'internal' && not __mapping_code:\n",
+    "        print(\"Column {} is internal.\".format(__col_name))"
    ]
   }
  ],
