--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -362,10 +362,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "640b25ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column Id is internal.\n",
+      "Column Category is internal.\n"
+     ]
+    }
+   ],
    "source": [
     "for item in columns_with_mappings:\n",
     "    __col_name = item['column']\n",
@@ -373,10 +382,17 @@
     "    __type = item['type']\n",
     "    __mapping_code = item['mapping_code']\n",
     "\n",
-    "\n",
-    "    if __type == 'internal' && not __mapping_code:\n",
+    "    if __type == 'internal':\n",
     "        print(\"Column {} is internal.\".format(__col_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a217f902",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
