--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -370,8 +370,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column Id is internal.\n",
-      "Column Category is internal.\n"
+      "Column 'Id' is internal.\n",
+      "Column 'Category' is internal.\n"
      ]
     }
    ],
@@ -383,7 +383,9 @@
     "    __mapping_code = item['mapping_code']\n",
     "\n",
     "    if __type == 'internal':\n",
-    "        print(\"Column {} is internal.\".format(__col_name))"
+    "        print(\"Column '{}' is internal.\".format(__col_name))\n",
+    "\n",
+    "        "
    ]
   },
   {
