--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -385,6 +385,7 @@
     "    if __type == 'internal':\n",
     "        print(\"Column '{}' is internal.\".format(__col_name))\n",
     "\n",
+    "        p = wbi.property.new()\n",
     "        "
    ]
   },
