Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -14,7 +14,8 @@
     "from wikibaseintegrator.wbi_config import config as wbi_config\n",
     "from os.path import join, isfile, exists, isdir, abspath, pardir\n",
     "from os import listdir, getcwd\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from wikibaseintegrator.datatypes import (URL, CommonsMedia, ExternalID, Form, GeoShape, GlobeCoordinate, Item, Lexeme, Math, MonolingualText, MusicalNotation, Property, Quantity, Sense, String, TabularData, Time)\n"
    ]
   },
   {
