--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "f06af458",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>column</th>\n",
-       "      <th>prop_type</th>\n",
+       "      <th>data_type</th>\n",
        "      <th>type</th>\n",
        "      <th>mapping_code</th>\n",
        "    </tr>\n",
@@ -275,35 +275,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Id</td>\n",
-       "      <td>num</td>\n",
+       "      <td>wikibase-entityid</td>\n",
        "      <td>internal</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Name</td>\n",
-       "      <td>str</td>\n",
+       "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Family Name</td>\n",
-       "      <td>str</td>\n",
+       "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Birthdate</td>\n",
-       "      <td>date</td>\n",
+       "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Nationality</td>\n",
-       "      <td>str</td>\n",
+       "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P27</td>\n",
        "    </tr>\n",
@@ -312,15 +312,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        column prop_type      type mapping_code\n",
-       "0           Id       num  internal          NaN\n",
-       "1         Name       str  external         P735\n",
-       "2  Family Name       str  external         P734\n",
-       "3    Birthdate      date  external         P569\n",
-       "4  Nationality       str  external          P27"
+       "        column          data_type      type mapping_code\n",
+       "0           Id  wikibase-entityid  internal          NaN\n",
+       "1         Name        external-id  external         P735\n",
+       "2  Family Name        external-id  external         P734\n",
+       "3    Birthdate        external-id  external         P569\n",
+       "4  Nationality        external-id  external          P27"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "11611bbd",
    "metadata": {},
    "outputs": [],
@@ -343,17 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "bcae7e4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'column': 'Id', 'prop_type': 'num', 'type': 'internal', 'mapping_code': nan}"
+       "{'column': 'Id',\n",
+       " 'data_type': 'wikibase-entityid',\n",
+       " 'type': 'internal',\n",
+       " 'mapping_code': nan}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +383,7 @@
    "source": [
     "for item in columns_with_mappings:\n",
     "    __col_name = item['column']\n",
-    "    __prop_type = item['prop_type']\n",
+    "    __data_type = item['data_type']\n",
     "    __type = item['type']\n",
     "    __mapping_code = item['mapping_code']\n",
     "\n",
