--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -390,7 +390,8 @@
     "    if __type == 'internal':\n",
     "        print(\"Column '{}' is internal.\".format(__col_name))\n",
     "\n",
-    "        p = wbi.property.new(datatypes=)\n",
+    "        p = wbi.property.new(datatype=__data_type)\n",
+    "        p.labels.set('en', )\n",
     "        "
    ]
   },
