--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -391,7 +391,8 @@
     "        print(\"Column '{}' is internal.\".format(__col_name))\n",
     "\n",
     "        p = wbi.property.new(datatype=__data_type)\n",
-    "        p.labels.set('en', )\n",
+    "        p.labels.set('en', __col_name)\n",
+    "        \n",
     "        "
    ]
   },
