--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -392,6 +392,9 @@
     "\n",
     "        p = wbi.property.new(datatype=__data_type)\n",
     "        p.labels.set('en', __col_name)\n",
+    "\n",
+    "        res = p.write()\n",
+    "\n",
     "        \n",
     "        "
    ]
