--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -395,8 +395,11 @@
     "\n",
     "        res = p.write()\n",
     "\n",
-    "        \n",
-    "        "
+    "        ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
+    "        if len(ident) == 1:\n",
+    "            print(ident[0].split(\"'\")[1])\n",
+    "        else:\n",
+    "            raise Exception(\"Surprise, this method didn't work.\")\n"
    ]
   },
   {
