--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "f06af458",
    "metadata": {},
    "outputs": [
@@ -269,6 +269,7 @@
        "      <th>data_type</th>\n",
        "      <th>type</th>\n",
        "      <th>mapping_code</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -278,6 +279,7 @@
        "      <td>string</td>\n",
        "      <td>internal</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Unique identifier for a SEMBU team member</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -285,6 +287,7 @@
        "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P735</td>\n",
+       "      <td>First name/given name of SEMBU team member</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -292,6 +295,7 @@
        "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P734</td>\n",
+       "      <td>Surname/Family name of SEMBU team member</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -299,6 +303,7 @@
        "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P569</td>\n",
+       "      <td>Date of birth</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -306,21 +311,29 @@
        "      <td>external-id</td>\n",
        "      <td>external</td>\n",
        "      <td>P27</td>\n",
+       "      <td>Nationality of SEMBU team member</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        column    data_type      type mapping_code\n",
-       "0           Id       string  internal          NaN\n",
-       "1         Name  external-id  external         P735\n",
-       "2  Family Name  external-id  external         P734\n",
-       "3    Birthdate  external-id  external         P569\n",
-       "4  Nationality  external-id  external          P27"
+       "        column    data_type      type mapping_code  \\\n",
+       "0           Id       string  internal          NaN   \n",
+       "1         Name  external-id  external         P735   \n",
+       "2  Family Name  external-id  external         P734   \n",
+       "3    Birthdate  external-id  external         P569   \n",
+       "4  Nationality  external-id  external          P27   \n",
+       "\n",
+       "                                  description  \n",
+       "0   Unique identifier for a SEMBU team member  \n",
+       "1  First name/given name of SEMBU team member  \n",
+       "2    Surname/Family name of SEMBU team member  \n",
+       "3                               Date of birth  \n",
+       "4            Nationality of SEMBU team member  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "11611bbd",
    "metadata": {},
    "outputs": [],
@@ -343,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "bcae7e4e",
    "metadata": {},
    "outputs": [
@@ -353,10 +366,11 @@
        "{'column': 'Id',\n",
        " 'data_type': 'string',\n",
        " 'type': 'internal',\n",
-       " 'mapping_code': nan}"
+       " 'mapping_code': nan,\n",
+       " 'description': 'Unique identifier for a SEMBU team member'}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -375,10 +389,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column 'Id' is internal.\n",
-      "P4\n",
-      "Column 'Category' is internal.\n",
-      "P5\n"
+      "Column 'Id' is internal.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Error while writing to the Wikibase instance\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
+      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
+      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
+      "    raise ModificationFailed(json_data['error'])\n",
+      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'\n"
+     ]
+    },
+    {
+     "ename": "ModificationFailed",
+     "evalue": "'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModificationFailed\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m/root/wikibase-nttdata/notebooks/insert_data.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m p\u001b[39m.\u001b[39mlabels\u001b[39m.\u001b[39mset(\u001b[39m'\u001b[39m\u001b[39men\u001b[39m\u001b[39m'\u001b[39m, __col_name)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m p\u001b[39m.\u001b[39mdescriptions\u001b[39m.\u001b[39mset(\u001b[39m'\u001b[39m\u001b[39men\u001b[39m\u001b[39m'\u001b[39m, __description)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m res \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39;49mwrite()\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m ident \u001b[39m=\u001b[39m [x \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mstr\u001b[39m(res)\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m) \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m_id=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mP\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m x]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_data.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(ident) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/property.py:125\u001b[0m, in \u001b[0;36mPropertyEntity.write\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs: Any) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m PropertyEntity:\n\u001b[1;32m    113\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    114\u001b[0m \u001b[39m    Write the PropertyEntity data to the Wikibase instance and return the PropertyEntity object returned by the instance.\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[39m    :return: an PropertyEntity of the response from the instance\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m     json_data \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m_write(data\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_json(), \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    126\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfrom_json(json_data\u001b[39m=\u001b[39mjson_data)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py:255\u001b[0m, in \u001b[0;36mBaseEntity._write\u001b[0;34m(self, data, summary, login, allow_anonymous, clear, is_bot, **kwargs)\u001b[0m\n\u001b[1;32m    252\u001b[0m login \u001b[39m=\u001b[39m login \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi\u001b[39m.\u001b[39mlogin\n\u001b[1;32m    254\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 255\u001b[0m     json_result: \u001b[39mdict\u001b[39m \u001b[39m=\u001b[39m mediawiki_api_call_helper(data\u001b[39m=\u001b[39;49mpayload, login\u001b[39m=\u001b[39;49mlogin, allow_anonymous\u001b[39m=\u001b[39;49mallow_anonymous, is_bot\u001b[39m=\u001b[39;49mis_bot, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    256\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[1;32m    257\u001b[0m     logging\u001b[39m.\u001b[39mexception(\u001b[39m'\u001b[39m\u001b[39mError while writing to the Wikibase instance\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py:211\u001b[0m, in \u001b[0;36mmediawiki_api_call_helper\u001b[0;34m(data, login, mediawiki_api_url, user_agent, allow_anonymous, max_retries, retry_after, maxlag, is_bot, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m     session \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    209\u001b[0m log\u001b[39m.\u001b[39mdebug(data)\n\u001b[0;32m--> 211\u001b[0m \u001b[39mreturn\u001b[39;00m mediawiki_api_call(\u001b[39m'\u001b[39;49m\u001b[39mPOST\u001b[39;49m\u001b[39m'\u001b[39;49m, mediawiki_api_url\u001b[39m=\u001b[39;49mmediawiki_api_url, session\u001b[39m=\u001b[39;49msession, data\u001b[39m=\u001b[39;49mdata, headers\u001b[39m=\u001b[39;49mheaders, max_retries\u001b[39m=\u001b[39;49mmax_retries, retry_after\u001b[39m=\u001b[39;49mretry_after, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py:122\u001b[0m, in \u001b[0;36mmediawiki_api_call\u001b[0;34m(method, mediawiki_api_url, session, max_retries, retry_after, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[39m# duplicate error\u001b[39;00m\n\u001b[1;32m    121\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mand\u001b[39;00m json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmodification-failed\u001b[39m\u001b[39m'\u001b[39m:  \u001b[39m# pragma: no cover\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[39mraise\u001b[39;00m ModificationFailed(json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    124\u001b[0m \u001b[39m# others case\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[39mraise\u001b[39;00m MWApiError(json_data)\n",
+      "\u001b[0;31mModificationFailed\u001b[0m: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'"
      ]
     }
    ],
