Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "9ef43b03-7605-465e-90b6-e02d86f56edb",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,8 @@
     "from os import listdir, getcwd\n",
     "import pandas as pd\n",
     "from wikibaseintegrator.datatypes import (URL, CommonsMedia, ExternalID, Form, GeoShape, GlobeCoordinate, Item, Lexeme, Math, MonolingualText, MusicalNotation, Property, Quantity, Sense, String, TabularData, Time)\n",
-    "from wikibaseintegrator.wbi_enums import ActionIfExists, WikibaseDatePrecision, WikibaseRank, WikibaseSnakType"
+    "from wikibaseintegrator.wbi_enums import ActionIfExists, WikibaseDatePrecision, WikibaseRank, WikibaseSnakType\n",
+    "from wikibaseintegrator.wbi_exceptions import MissingEntityException, ModificationFailed, MWApiError"
    ]
   },
   {
@@ -434,17 +435,22 @@
     "    if __type == 'internal':\n",
     "        print(\"Column '{}' is internal.\".format(__col_name))\n",
     "\n",
-    "        p = wbi.property.new(datatype=__data_type)\n",
-    "        p.labels.set('en', __col_name)\n",
-    "        p.descriptions.set('en', __description)\n",
+    "        try:\n",
     "\n",
-    "        res = p.write()\n",
+    "            p = wbi.property.new(datatype=__data_type)\n",
+    "            p.labels.set('en', __col_name)\n",
+    "            p.descriptions.set('en', __description)\n",
     "\n",
-    "        ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
-    "        if len(ident) == 1:\n",
-    "            print(ident[0].split(\"'\")[1])\n",
-    "        else:\n",
-    "            raise Exception(\"Surprise, this method didn't work.\")\n"
+    "            res = p.write()\n",
+    "\n",
+    "            ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
+    "            if len(ident) == 1:\n",
+    "                print(ident[0].split(\"'\")[1])\n",
+    "            else:\n",
+    "                raise Exception(\"Surprise, this method didn't work.\")\n",
+    "        \n",
+    "        except ModificationFailed e:\n",
+    "            print(\"Property '{}' already exists\".format(__col_name))\n"
    ]
   },
   {
